added animak items

--- a/src/main/resources/assets/little_critters/lang/es_es.json
+++ b/src/main/resources/assets/little_critters/lang/es_es.json
@@ -1,4 +1,6 @@
 {
   "entity.little_critters.firefly": "Luciérnaga",
-  "item.little_critters.firefly_spawn_egg": "Generar Luciérnaga"
+  "item.little_critters.firefly_spawn_egg": "Generar Luciérnaga",
+  "item.little_critters.bug_net": "Red",
+  "item.little_critters.animal": "Animal capturado"
 }
