--- a/src/main/resources/assets/little_critters/lang/en_us.json
+++ b/src/main/resources/assets/little_critters/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "entity.little_critters.firefly": "Firefly",
-  "item.little_critters.firefly_spawn_egg": "Firefly Spawn Egg"
+  "item.little_critters.firefly_spawn_egg": "Firefly Spawn Egg",
+  "item.little_critters.bug_net": "Bugs Net",
+  "item.little_critters.animal": "Caught Animal"
 }
