--- a/src/main/resources/assets/little_critters/lang/es_es.json
+++ b/src/main/resources/assets/little_critters/lang/es_es.json
@@ -1,6 +1,8 @@
 {
   "entity.little_critters.firefly": "Luciérnaga",
+  "entity.little_critters.ant": "Hormiga",
   "item.little_critters.firefly_spawn_egg": "Generar Luciérnaga",
   "item.little_critters.bug_net": "Red",
-  "item.little_critters.animal": "Animal capturado"
+  "item.little_critters.animal": "Animal capturado",
+  "item.little_critters.chicken_nest": "Nido de Pollo"
 }
