--- a/src/main/resources/assets/little_critters/lang/es_es.json
+++ b/src/main/resources/assets/little_critters/lang/es_es.json
@@ -4,5 +4,5 @@
   "item.little_critters.firefly_spawn_egg": "Generar Luciérnaga",
   "item.little_critters.bug_net": "Red",
   "item.little_critters.animal": "Animal capturado",
-  "item.little_critters.chicken_nest": "Nido de Pollo"
+  "block.little_critters.chicken_nest": "Nido de Pollo"
 }
